--- a/_posts/life/2018-01-04-my2017.md
+++ b/_posts/life/2018-01-04-my2017.md
@@ -3,7 +3,7 @@ layout: post
 title: 说说我的2017
 date: 2018-01-04
 categories: blog
-tags: [生活]
+tags: [生活札记]
 description: 现在才说2017，是不是晚了些？元旦小长假，七姑娘在老家陪父母，恰逢母亲60岁生日，便暂别电脑和手机，陪着老人家过了几天清净日子。虽然和年初的计划不太一致，但总的来说，2017年，七姑娘过得还算充实，生活和工作都收获颇丰。有几件重要的事可就真的不得不记录一下了。
 
 ---
