--- a/_posts/Cucumber/2017-01-13-Cucumber-5.md
+++ b/_posts/Cucumber/2017-01-13-Cucumber-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 第五篇：Cucumber之Step Definitions
+title: Cucumber之Step Definitions
 date: 2017-01-13
 categories: blog
 tags: [Cucumber]
