--- a/_posts/Cucumber/2017-01-14-Cucumber-6.md
+++ b/_posts/Cucumber/2017-01-14-Cucumber-6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 第六篇：Cucumber 之 Commond Line
+title:  Cucumber 之 Commond Line
 date: 2017-01-14
 categories: blog
 tags: [Cucumber]
