--- a/_posts/Web/2018-02-10-html-1.md
+++ b/_posts/Web/2018-02-10-html-1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: HTML学习笔记一：基础知识
+title: HTML 基础知识
 date: 2018-02-10
 categories: blog
-tags: [Web]
+tags: [Web修炼记]
 description: HTML (HyperText Markup Language）是一种用于创建网页的标准标记语言。HTML 运行在浏览器上，由浏览器来解析。
 ---
 
@@ -451,3 +451,5 @@ JavaScript 最常用于图片操作、表单验证以及内容动态更新。
 
 	document.getElementById("demo").style.color="#ff0000";
 
+---
+本文参考：[w3cschool HTML教程](https://www.w3cschool.cn/html/)	
