--- a/_posts/life/2017-08-15-drawing.md
+++ b/_posts/life/2017-08-15-drawing.md
@@ -9,27 +9,33 @@ description: 喜欢动漫，并且会一直喜欢下去。
 ---
 
 喜欢动漫，并且会一直喜欢下去。
-![]({{site.baseurl }}/img/design/image-011.jpeg)
+
+---
 
 #### 因为遇见你，我才知道我也能拥有美丽的记忆。
 
 看遍了宫崎骏，最爱的还是千寻，莫名地觉得这个勇敢的小姑娘和自己很像。你说呢？
 ![]({{site.baseurl }}/img/design/image-012.jpeg)
 
-### 我现在决定了，我要走自己的忍道，朝着一个绝对不会后悔的路，一直往前走。
+---
+
+#### 我现在决定了，我要走自己的忍道，朝着一个绝对不会后悔的路，一直往前走。
 
 曾一度迷恋《火影》，无法自拔，时而大笑，时而热泪盈眶。这样一个经典，错过了，将是终生遗憾。
 
 Ps. 小鸣人还是特别可爱。
 ![]({{site.baseurl }}/img/design/image-013.jpeg)
 
-### 我不想后悔，不想懊恼“当时为什么没有去做”？
+---
+
+#### 我不想后悔，不想懊恼“当时为什么没有去做”？
 
 喜欢的鸣人一直在成长，一直在努力地做自己想做的事，哪怕头破血流。喜欢鸣人的我，正在被他深深地影响着......
 ![]({{site.baseurl }}/img/design/image-014.jpeg)
 
+---
 
-### 真相只有一个！
+#### 真相只有一个！
 
 柯南？恩......其实，七姑娘没看过。
 
