--- a/_posts/Web/2018-02-12-html-3.md
+++ b/_posts/Web/2018-02-12-html-3.md
@@ -8,7 +8,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 ---
 
 ---
-#### HTML 基本文档
+#### 1. HTML 基本文档
 
 	<!DOCTYPE html>
 	<html>
@@ -21,7 +21,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### 基本标签
+#### 2. 基本标签
 
 	<h1>最大的标题</h1>
 	 <h2> . . . </h2>
@@ -37,7 +37,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### 文本格式化
+#### 3. 文本格式化
 
 	<b>粗体文本</b>
 	 <code>计算机代码</code>
@@ -60,7 +60,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### 链接
+#### 4. 链接
 
 	普通的链接：<a href="链接地址">链接文本</a>
 	图像链接： <a href="http://www.example.com/"><img src="URL" alt="替换文本"></a> 
@@ -70,13 +70,13 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### 图片
+#### 5. 图片
 
 	<img src="URL" alt="替换文本" height="42" width="42">
 
 ---
 
-#### 样式/区块
+#### 6. 样式/区块
 
 	<style type="text/css">
 	   h1 {color:red;}
@@ -89,7 +89,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### 无序列表
+#### 7. 无序列表
 
 	<ul>
 	   <li>项目</li>
@@ -98,14 +98,14 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 
 ---
 
-#### <ol>
+#### 8. 有序列表
    
 	<ol>
 	   <li>第一项</li>
 	   <li>第二项</li>
 	 </ol>
 
-#### 定义列表
+#### 9. 定义列表
 
 	<dl>
 	   <dt>项目 1</dt>
@@ -114,7 +114,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 	     <dd>描述项目 2</dd>
 	 </dl>
 
-#### 表格
+#### 10. 表格
 
 	<table border="1">
 	   <tr>
@@ -127,11 +127,11 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 	   </tr>
 	 </table>
 	 
-#### 框架
+#### 11. 框架
 
 	<iframe src="demo_iframe.htm"></iframe>
 	
-#### 表单	
+#### 12. 表单	
 	
 	<form action="demo_form.php" method="post/get">
 	
@@ -153,7 +153,7 @@ description: HTML (HyperText Markup Language）是一种用于创建网页的标
 	</textarea> 
 	</form>
 		
-#### 实体	
+#### 13. 实体	
 	
 	&lt; 等同于 <
 	&gt; 等同于 >
