update about and style

--- a/_posts/Cucumber/2017-01-14-Cucumber-6.md
+++ b/_posts/Cucumber/2017-01-14-Cucumber-6.md
@@ -3,7 +3,7 @@ layout: post
 title:  Cucumber 之 Commond Line
 date: 2017-01-14
 categories: blog
-tags: [Cucumber]
+tags: [Web UI Testing]
 description: Step Definition相当于业务领域和程序领域之间桥梁
 
 ---
