--- a/_posts/Testing/2018-05-23-defects.md
+++ b/_posts/Testing/2018-05-23-defects.md
@@ -3,7 +3,7 @@ layout: post
 title: 敏捷开发中，学会为Defects管理做减法
 date: 2018-5-23
 categories: blog
-tags: [测试方法论]
+tags: [测试这件事]
 description: 敏捷开发中，学会为Defects管理做减法
 
 ---
