--- a/_posts/Web/2018-06-08-momentJs.md
+++ b/_posts/Web/2018-06-08-momentJs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Dev推荐给我一个厉害的JavaScript日期处理类库
+title: 推荐一个厉害的JavaScript日期处理类库
 date: 2018-06-08
 categories: blog
 tags: [Web修炼记]
