--- a/_posts/Cucumber/2017-01-10-Cucumber-2.md
+++ b/_posts/Cucumber/2017-01-10-Cucumber-2.md
@@ -3,7 +3,7 @@ layout: post
 title: Cucumber的正确安装姿势
 date: 2017-01-10
 categories: blog
-tags: [Cucumber]
+tags: [Web UI Testing]
 description: Cucumber是一款命令行工具，要从命令行安装。
 
 ---
