--- a/_posts/Cucumber/2017-01-11-Cucumber-3.md
+++ b/_posts/Cucumber/2017-01-11-Cucumber-3.md
@@ -3,7 +3,7 @@ layout: post
 title: Cucumber语法之Gherkin
 date: 2017-01-11
 categories: blog
-tags: [Cucumber]
+tags: [Web UI Testing]
 description: Cucumber是一款命令行工具，要从命令行安装。
 
 ---
