update haeder pic and sumbmit reading English

--- a/_posts/Cucumber/2017-01-12-Cucumber-4.md
+++ b/_posts/Cucumber/2017-01-12-Cucumber-4.md
@@ -3,6 +3,7 @@ layout: post
 title: 第一个Cucumber Test
 date: 2017-01-12
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [Web UI Testing]
 description: 发表完《初识Cucumber》，有读者评论，说自己也在学习cucumber，但是苦于公司没有网络，学习资源匮乏，学习进度一拖再拖。这不禁让我想起了当初学习Selenium的经历。
               
