--- a/_posts/Testing/2017-09-22-web-test.md
+++ b/_posts/Testing/2017-09-22-web-test.md
@@ -3,6 +3,7 @@ layout: post
 title: 我的Web测试指南
 date: 2017-9-22
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [测试这件事]
 description: 于是我懂了，在小J的技术栈里，缺少一份web测试指南，来帮助她对Web应用抽丝剥茧。Web测试旨在找出Web应用系统中潜在的缺陷。无论什么应用系统、什么平台、采用什么技术架构、Web测试，始终万变不离其宗。可将其归纳为以下三类......
 
