--- a/_posts/Web/2017-10-09-http-1.md
+++ b/_posts/Web/2017-10-09-http-1.md
@@ -3,6 +3,7 @@ layout: post
 title: 你不得不知道HTTP协议基础
 date: 2017-10-09
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [Web修炼记]
 description: HTTP（HyperText Transfer Protocol），超文本传输协议，是互联网上应用最为广泛的一种网络协议。HTTP协议工作于客户端-服务端（C/S）架构上。浏览器作为HTTP客户端通过URL向HTTP服务端即WEB服务器发送所有请求。而HTTP就是浏览器和服务器之间的传输协议，也就是服务器与浏览器之间相互通信所遵守的规则。
 ---
