--- a/_posts/Cucumber/2017-01-09-Cucumber-1.md
+++ b/_posts/Cucumber/2017-01-09-Cucumber-1.md
@@ -3,6 +3,7 @@ layout: post
 title: 初识Cucumber
 date: 2017-01-09
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [Web UI Testing]
 description: 摆脱传统的手工测试，具备写代码的能力，至少精通一种脚本语言和自动化测试框架”。这是TW每一位优秀QA的必备素质，也是我对自己的基本要求。
 
