--- a/_posts/Cucumber/2017-01-13-Cucumber-5.md
+++ b/_posts/Cucumber/2017-01-13-Cucumber-5.md
@@ -3,6 +3,7 @@ layout: post
 title: Cucumber之Step Definitions
 date: 2017-01-13
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [Web UI Testing]
 description: Step Definition相当于业务领域和程序领域之间桥梁
 
