--- a/_posts/Cucumber/2017-01-15-Cucumber-7.md
+++ b/_posts/Cucumber/2017-01-15-Cucumber-7.md
@@ -3,6 +3,7 @@ layout: post
 title:  如何写出漂亮的Cucumber代码
 date: 2017-01-15
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [Web UI Testing]
 description: 小C同学说，通过几期Cucumber的基本知识学习，他迫不及待地编写了自己的cucumber peoject。可是他的features显得即简单又笨拙！怎么才能写出漂亮的features呢？别急，今天我们就来讲讲如何优化features。
 
