--- a/_posts/Web/2017-06-11-html-2.md
+++ b/_posts/Web/2017-06-11-html-2.md
@@ -2,6 +2,7 @@
 layout: post
 title: HTML URL
 date: 2017-06-11
+header-img: "../img/header/Home5.jpg"
 categories: blog
 tags: [Web修炼记]
 description: URL，统一资源定位器(Uniform Resource Locators)。Web浏览器通过URL从Web服务器请求页面。
