--- a/_posts/life/2017-08-15-drawing.md
+++ b/_posts/life/2017-08-15-drawing.md
@@ -3,6 +3,7 @@ layout: post
 title: 献丑了
 date: 2017-08-15
 categories: blog
+header-img: "../img/header/Home5.jpg"
 tags: [生活琐事]
 description: 喜欢动漫，并且会一直喜欢下去。
 
