--- a/_posts/1. Life/2017-08-15-drawing.md
+++ b/_posts/1. Life/2017-08-15-drawing.md
@@ -4,7 +4,7 @@ title: 献丑了
 date: 2017-08-15
 categories: blog
 header-img: "../img/header/Home8.jpg"
-tags: [1. 我所理解的生活]
+tags: [我所理解的生活]
 description: 喜欢动漫，并且会一直喜欢下去。
 
 ---
