--- a/_posts/4. Web UI Testing/2017-01-09-Cucumber-1.md
+++ b/_posts/4. Web UI Testing/2017-01-09-Cucumber-1.md
@@ -4,7 +4,7 @@ title: 初识Cucumber
 date: 2017-01-09
 categories: blog
 header-img: "../img/header/Home3.jpg"
-tags: [4. Web UI自动化]
+tags: [Web UI自动化]
 description: 摆脱传统的手工测试，具备写代码的能力，至少精通一种脚本语言和自动化测试框架”。这是TW每一位优秀QA的必备素质，也是我对自己的基本要求。
 
 ---
