--- a/_posts/4. Web UI Testing/2017-01-11-Cucumber-3.md
+++ b/_posts/4. Web UI Testing/2017-01-11-Cucumber-3.md
@@ -4,7 +4,7 @@ title: Cucumber语法之Gherkin
 date: 2017-01-11
 categories: blog
 header-img: "../img/header/Home3.jpg"
-tags: [4. Web UI自动化]
+tags: [Web UI自动化]
 description: Cucumber是一款命令行工具，要从命令行安装。
 
 ---
