--- a/_posts/6. API Testing/2018-06-08-momentJs.md
+++ b/_posts/6. API Testing/2018-06-08-momentJs.md
@@ -4,7 +4,7 @@ title: 一个厉害的JavaScript日期处理类库
 date: 2018-06-08
 categories: blog
 header-img: "../img/header/Home3.jpg"
-tags: [6. API测试]
+tags: [API测试]
 description: 
 ---
 我刚刚花了几天时间将Adventure系统的API测试全部重构了一遍，看着386个测试在CI上跑起来，内心未免些许激动。
