--- a/_posts/8. Testing/2018-05-23-defects.md
+++ b/_posts/8. Testing/2018-05-23-defects.md
@@ -4,7 +4,7 @@ title: 敏捷开发中的Defects管理
 date: 2018-5-23
 categories: blog
 header-img: "../img/header/Home3.jpg"
-tags: [8. 测试锦囊]
+tags: [测试锦囊]
 description: 敏捷开发中，学会为Defects管理做减法
 
 ---
