--- a/_posts/9. Learning Coding/2017-06-12-html-3.md
+++ b/_posts/9. Learning Coding/2017-06-12-html-3.md
@@ -4,7 +4,7 @@ title: HTML 速查手册
 date: 2017-06-12
 categories: blog
 header-img: "../img/header/Home2.jpg"
-tags: [9. 从头学编码]
+tags: [从头学编码]
 description: HTML (HyperText Markup Language）是一种用于创建网页的标准标记语言。HTML 运行在浏览器上，由浏览器来解析。
 ---
 
