--- a/_posts/4. Web UI Testing/2017-01-14-Cucumber-6.md
+++ b/_posts/4. Web UI Testing/2017-01-14-Cucumber-6.md
@@ -4,7 +4,7 @@ title:  Cucumber 之 Commond Line
 date: 2017-01-14
 categories: blog
 header-img: "../img/header/Home3.jpg"
-tags: [4. Web UI自动化]
+tags: [Web UI自动化]
 description: Step Definition相当于业务领域和程序领域之间桥梁
 
 ---
