--- a/_posts/9. Learning Coding/2017-06-10-html-1.md
+++ b/_posts/9. Learning Coding/2017-06-10-html-1.md
@@ -4,7 +4,7 @@ title: HTML 基础知识
 date: 2017-06-10
 header-img: "../img/header/Home2.jpg"
 categories: blog
-tags: [9. 从头学编码]
+tags: [从头学编码]
 description: HTML (HyperText Markup Language）是一种用于创建网页的标准标记语言。HTML 运行在浏览器上，由浏览器来解析。
 ---
 
