--- a/_posts/9. Learning Coding/2017-06-11-html-2.md
+++ b/_posts/9. Learning Coding/2017-06-11-html-2.md
@@ -4,7 +4,7 @@ title: HTML URL
 date: 2017-06-11
 header-img: "../img/header/Home2.jpg"
 categories: blog
-tags: [9. 从头学编码]
+tags: [从头学编码]
 description: URL，统一资源定位器(Uniform Resource Locators)。Web浏览器通过URL从Web服务器请求页面。
 ---
 
