--- a/_posts/Life/2020-9-6-in-csdn.md
+++ b/_posts/Life/2020-9-6-in-csdn.md
@@ -73,7 +73,12 @@ description: 将博客搬至CSDN
 
 最开始，我并不在乎有多少人关注。重要的是自己内心获得的安宁和满足，就和有的人坚持跑步是一个道理，并不需要随时有人在旁边为你加油、赞扬你跑步的姿势、呼吸的节奏。
 
-可当我埋头写了几十篇之后，陆续收到私信，“你的这篇文章来的太及时了，让我茅塞顿开”、“你的文章让同样做测试的我受到了极大的鼓舞”、“你总是充满正能量，我以你为榜样、希望自己像你一样阳光”……
+可当我埋头写了几十篇之后，陆续收到私信：
+
+* “你的这篇文章来的太及时了，让我茅塞顿开”
+* “你的文章让同样做测试的我受到了极大的鼓舞”
+* “你总是充满正能量，我以你为榜样、希望自己像你一样阳光”
+* ……
 
 我曾经在阅读邱俊涛的博客时，激动地泪流满面。说不出缘由，只觉得在某一个瞬间得到了共鸣。不曾想，平凡的我、平凡的文字也能在某一个瞬间打动一些人。这一点超出了我的预期，但我深表欣慰，也愈发感受到坚持写作的重要性。
 
